@@ -371,3 +371,4 @@ Revision	Version Updated		Log Message
 392		C++			Unciv reforms fire proper effects.
 394		C++			Bill of Rights NI reduces slaves by 10%
 395		C++			Upper House determined by sliders.
+421		C++			Incorporate better political party code.
